# ocel-transform

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: blocked-words.txt
.github/workflows/: ci.yml
src/: apply.rs  lib.rs  main.rs  recipe.rs
tests/: apply.rs  graph_steps.rs
