[package]
name = "ocel-transform"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/katsut/ocel-transform"
documentation = "https://docs.rs/ocel-transform"
readme = "README.md"
description = "Recipe-driven OCEL 2.0 log transformation: clean, rename, and filter event logs before mining"
keywords = ["ocel", "process-mining", "etl", "event-log", "ocel2"]
categories = ["command-line-utilities", "data-structures"]

[[bin]]
name = "ocel-transform"
path = "src/main.rs"

[dependencies]
ocel = "0.1.4"
ocel-etl = "0.1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
